# almambet

./: .gitignore  Cargo.toml  README.md  build_script.sh
src/: mail_move_rules.rs  mail_reader.rs  main.rs  settings.rs  spam_filter.rs  tests.rs  web.rs  web_services.rs
src/mail_move_rules/: mail_move_settings.rs
src/mail_reader/: display.rs  encryption.rs  imap.rs  message.rs  settings.rs
src/resources/: email_move_rules.CHANGE_ME.yaml  settings.CHANGE_ME.yaml  spam_filter_settings.yaml
src/spam_filter/: spam_filter_settings.rs
templates/: email_detail.html  emails.html  error.html
