[package]
name = "almambet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = "0.11.1"
async-std = { version = "1.13.2", features = ["attributes"] }
native-tls = "0.2.14"
anyhow = "1.0.97"
futures = "0.3.31"
async-native-tls = "0.5.0"
mailparse = "0.16.1"
rpassword = "7.4.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["compat"] }
tokio-native-tls = "0.3.1"
serde_yaml_bw = "2.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
backtrace = "0.3.76"
axum = "0.8.7"
tera = "1.20.1"
chrono = "0.4.42" # For date handling
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.2"
log = "0.4.28"
fern = "0.7.1"
urlencoding = "2.1.3"
tracing-subscriber = "0.3.20"
tokio-cron-scheduler = "0.15.1"
regex = "1.12.2"
clap = "4.5.53"
itertools = "0.14.0"