[package]
name = "almambet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = "0.11"
async-std = { version = "1.13", features = ["attributes"] }
native-tls = "0.2"
anyhow = "1.0"
futures = "0.3"
async-native-tls = "0.6"
mailparse = "0.16"
rpassword = "7.4"
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tokio-native-tls = "0.3"
yaml_serde = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
backtrace = "0.3"
axum = "0.8"
tera = "1.20"
chrono = "0.4" # For date handling
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"
log = "0.4"
fern = "0.7"
urlencoding = "2.1"
tracing-subscriber = "0.3"
tokio-cron-scheduler = "0.15"
regex = "1.12"
clap = "4.5"
itertools = "0.14"
dirs = "6.0"